--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -83,10 +83,10 @@
         switch (obj.event) {
           case "edit":
             editdata = data;
-            edit(data.sBulletin);
+            edit(data.id);
             break;
           case "del":
-            del(data.sBulletin);
+            del(data.id);
             break;
         }
       });
@@ -130,16 +130,16 @@
   </script>
   <!-- 头工具栏模板 -->
   <script type="text/html" id="toolbarTpl">
-  <div class="layui-btn-container">
-    <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
-    <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
-  </div>
-</script>
+    <div class="layui-btn-container">
+      <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+      <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
+    </div>
+  </script>
 
   <script type="text/html" id="operationTpl">
-  <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-  <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
-</script>
+    <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+    <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+  </script>
 </body>
 
 </html>
