--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -16,6 +16,7 @@
   <!--js逻辑-->
   <script src="../../lib/layui/layui.js"></script>
   <script>
+    var editNotice;
     layui.use(["element", "table", "okLayer", "okUtils"], function () {
       let table = layui.table;
       let okLayer = layui.okLayer;
@@ -33,11 +34,12 @@
         toolbar: "#toolbarTpl",
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
-          { field: "iId", title: "ID", width: 90, fixed: 'left' },
+          { field: "id", title: "ID", width: 90, fixed: 'left' },
           {
-            field: "iNoticeType", title: "公告类型", width: 90, align: "center", templet: function (d) {
+            field: "iType", title: "公告类型", width: 90, align: "center",
+            templet: function (d) {
               var ret = '';
-              switch (d.iNoticeType) {
+              switch (d.iType) {
                 case 1: ret = '走马灯'; break;
                 case 2: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">停服公告</span>'; break;
                 case 3: ret = '公告'; break;
@@ -48,19 +50,8 @@
             }
           },
           { field: "sContent", title: "内容" },
-          {
-            field: "iBeginTime", title: "开始时间", align: "center", templet: function (d) {
-              return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
-            }
-          },
-          {
-            field: "iEndTime", title: "结束时间", align: "center", templet: function (d) {
-              if (d.iEndTime < d.iBeginTime) {
-                return '结束时间不能小于开始时间';
-              }
-              return okUtils.dateFormat(new Date(d.iEndTime * 1000), 'yyyy-MM-dd hh:mm:ss');
-            }
-          },
+          { field: "sBeginTime", title: "开始时间", align: "center" },
+          { field: "sEndTime", title: "结束时间", align: "center" },
           {
             field: "iDisplayType", title: "显示位置", width: 90, align: "center", templet: function (d) {
               var ret = '';
@@ -74,11 +65,11 @@
             }
           },
           { field: "iDisplayInterval", title: "显示间隔（秒）", width: 90, align: "center" },
-          { field: "iDisplayTimes", title: "显示次数", width: 90, align: "center" },
+          { field: "iDisplayNum", title: "显示次数", width: 90, align: "center" },
           {
-            field: "iStatus", title: "状态", width: 90, align: "center", templet: function (d) {
+            field: "iPause", title: "状态", width: 90, align: "center", templet: function (d) {
               var ret = '';
-              switch (d.iStatus) {
+              switch (d.iPause) {
                 case 1: ret = '未开启'; break;
                 case 2: ret = '开启中'; break;
                 case 3: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">已结束</span>'; break;
@@ -88,10 +79,20 @@
               return ret;
             }
           },
-          { field: "sZond", title: "分区", align: "center" },
+          { field: "sZone", title: "分区", align: "center" },
           { field: "iMaintainTime", title: "维护时间（分钟）", width: 90, align: "justify" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
+        parseData: function (res) {
+          for (i = 0; i < res.data.length; ++i) {
+            res.data[i].id = res.data[i].iNoticeId;
+            var tmp = "";
+            for (j = 0; j < res.data[i].vZoneId.length; ++j) {
+              tmp += res.data[i].vZoneId[j];
+            }
+            res.data[i].sZone = tmp;
+          }
+        }
       });
 
       table.on("toolbar(tableFilter)", function (obj) {
@@ -109,16 +110,17 @@
         let data = obj.data;
         switch (obj.event) {
           case "edit":
-            edit(data.sNotice);
+            editNotice = data;
+            edit(data.id);
             break;
           case "del":
-            del(data.sNotice);
+            del(data.id);
             break;
         }
       });
 
       function add() {
-        okLayer.open("添加公告", "notice-add.html", "90%", "90%", null, function () {
+        okLayer.open("添加跑马灯", "notice-add.html", "90%", "90%", null, function () {
           noticeTable.reload();
         })
       }
@@ -138,8 +140,8 @@
       }
 
       function edit(id) {
-        okLayer.open("编辑渠道", "dir-edit.html?id=" + id, "90%", "90%", null, function () {
-          dirTable.reload();
+        okLayer.open("编辑跑马灯", "notice-edit.html", "90%", "90%", null, function () {
+          noticeTable.reload();
         })
       }
 
@@ -156,16 +158,16 @@
   </script>
   <!-- 头工具栏模板 -->
   <script type="text/html" id="toolbarTpl">
-  <div class="layui-btn-container">
-    <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
-    <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
-  </div>
-</script>
+    <div class="layui-btn-container">
+      <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+      <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
+    </div>
+  </script>
 
   <script type="text/html" id="operationTpl">
-  <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-  <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
-</script>
+    <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+    <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+  </script>
 </body>
 
 </html>
